--- a/ios.plist
+++ b/ios.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://10.1.0.1/sda1/app/ios.ipa</string>
+					<string>http://10.1.0.1/app/ios.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
