--- a/iosWG205E.plist
+++ b/iosWG205E.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Í¾Å£ÂÃÓÎ</string>
+				<string>途牛旅游</string>
 			</dict>
 		</dict>
 	</array>
