--- a/ios.plist
+++ b/ios.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>é€”ç‰›æ—…æ¸¸</string>
+				<string>途牛旅游</string>
 			</dict>
 		</dict>
 	</array>
