--- a/ios.plist
+++ b/ios.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.200.1:4990/TuniuApp_XianXiaHuoDong.ipa</string>
+					<string>http://10.1.0.1/TuniuApp_XianXiaHuoDong.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://192.168.200.1:4990/logo.jpg</string>
+					<string>http://10.1.0.1/img/apple-touch-icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://192.168.200.1:4990/logo.jpg</string>
+					<string>http://10.1.0.1/img/apple-touch-icon.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
